Fix ignore popup button alignment;
With "align-items: center" if some buttons on the same row where higher
than others, the items would be centered vertically, which looked weird.

--- a/packages/front/src/App.css
+++ b/packages/front/src/App.css
@@ -575,7 +575,6 @@ input[type='radio']:checked + .state-select-button--button {
 
 .input-layout {
   display: flex;
-  align-items: center;
   box-sizing: border-box;
 }
 
